--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "express": "^4.21.1",
     "json-serve": "^0.1.0",
     "json-server": "^0.17.4",
     "json-server-auth": "^2.1.0"
